# invest

./: .env.uv  .gitignore  404.html  AGENTS.md  BACKTEST_README.md  BACKTEST_STATUS.md  CHANGELOG_2025-10-31.md  CLAUDE.md  CLAUDE_DESKTOP_GUIDE.md  INSTALL.md  MCP_USAGE.md  MODEL_MANAGEMENT.md  MULTI_HORIZON_NN.md  PROJECT.md  QUICK_START.md  README.md  SINGLE_HORIZON_NN.md  SYNC_CACHE_TO_WINDOWS.md  TODO.md  WINDOWS_WSL_SETUP.md  WSL_SETUP.md  ai_update.md  analyze_cnc.py  asset_valuation.md  claude_desktop_config.json  cleanup_recommendations.md  cnc_fair_value.py  comprehensive_training_results_20251005_231546.json  conservative_value_screen_20250812_223153_report.txt  demo_data_provider_abstraction.py  docker-compose.yml  empty_tickers.txt  enhanced_dashboard_example.py  history.md  improved_retry_logic.py  index.html  learn.md  mcp_config.json  mcp_server_v2.py  mkdocs.yml  (+26 more)
.agents/: architecture.md  audit-2026-02-21.md  audit_2026-02-21.md  coding-standards.md  coding_standards.md  data-conventions.md  definition-of-done.md  definition_of_done.md  deployment.md  error-log.md  error_log.md  gemini_cli.md  history.md  mcp_config.json  notes.md  report-2026-05-27.md  solutions.md  tasks.md
.agents/mcp_servers/: investment_analysis.py  mcp_server.py  mcp_server_v2.py  portfolio_tools.py  screening.py  stock_mcp.py  stock_mcp_server.py
.claude/: data_fetcher_requirements.md  debugging_workflow.md  organization_rules.md
.claude/commands/: brief.md  research.md  update.md  update_db.md
.githooks/: pre-push
.github/workflows/: ci.yml  ci.yml.example  deploy.yml  docs.yml  test.yml
analysis/configs/: aggressive_growth.yaml  europe_eurostoxx50.yaml  international_value.yaml  japan_buffett_favorites.yaml  japan_topix30.yaml  sp500_test50.yaml  spain_ibex35.yaml  test_tech_giants.yaml
api-reference/configuration/: index.html
api-reference/data/: index.html
api-reference/pipeline/: index.html
api-reference/screening/: index.html
archive/BACKTEST_STATUS/: index.html
archive/CHANGELOG_2025-10-31/: index.html
autoresearch/: results.tsv  train.py
backtesting/: README.md  __init__.py  run_backtest.py
config/: claude_desktop_config.json
configs/: mixed_international.yaml  sp500_full.yaml  sp500_test25.yaml  watchlist_analysis.yaml
contributing/: index.html
dashboard/: dashboard_data.json  model_specs.html  valuation_dashboard.html
dashboard-scaling-solution/: index.html
dashboard_error_test/: dashboard_data.json  dashboard_data_backup.json  valuation_dashboard.html
dashboard_test/: dashboard_data.json  dashboard_data_backup.json  valuation_dashboard.html
database_migration_plan/: index.html
docs/: contributing.md  dashboard-scaling-solution.md  database_migration_plan.md  index.md  lstm_transformer_model.md  multi_horizon_neural_network.md  neural_network_evaluation_guide.md  neural_network_model.md  portable_training_guide.md  sqlite_integration_complete.md  sqlite_integration_plan.md  stuff.md
docs/mcp/: README.md
examples/: neural_network_dashboard_demo.py  neural_network_demo.py
invest_training_package/: .gitignore  README.md  TRAINING_SETUP.md  windows_training_setup.ps1
journal/: 2026-02-07_rebalance_moh_sony.md
lstm_transformer_model/: index.html
mcp_servers/: README.md  investment_analysis.py  mcp_server.py  screening.py  stock_mcp.py
models/: index.html
multi_horizon_neural_network/: index.html
neural_network/: README.md
neural_network_evaluation_guide/: index.html
neural_network_model/: index.html
notes/: 2025-10-23-performance-observations.md  3year_model_status.md  README.md  asset_valuation.md  backtesting_strategy_analysis.md  buffett_insights_2026.md  gbm_implementation_summary.md  glossary.md  investment_opportunities_energy_ev_ai.md  learn.md  neural_network_features.md  portfolio_snapshot_2026_02.md  portfolio_strategy_2026_02.md  sec_edgar_data_management.md  sec_edgar_solution.md  stuff.md  todo.stocks.md  watchlist.md  yfinance_fundamental_limits.md
portable_training_guide/: index.html
scripts/: README.md  analyze_stock.py  backfill_vix_data.py  backtest_politician.py  backup_database.sh  cache_management.py  calculate_historical_ratios.py  check_database_health.py  check_training_progress.sh  comprehensive_neural_training.py  create_current_stock_table.py  create_postgres_schema.sql  create_valuation_results_table.py  create_valuation_schema.py  currency_converter.py  dashboard.py  dashboard_server.py  data_fetcher.py  enhance_dashboard_sorting.py  fetch_activist_data.py  fetch_edinet_data.py  fetch_holdings_data.py  fetch_insider_data.py  fetch_politician_data.py  fetch_polymarket_policy.py  fetch_truth_social.py  filter_best_valuations.py  finish.sh  finnhub_insiders.py  generate_multi_horizon_dashboard.py  genetic_optimizer.py  get_real_sp500.py  index_manager.py  load_positions.py  macro_context.py  migrate_data_to_postgres.py  migrate_json_to_sqlite.py  migrate_price_history.py  model_comparison.py  multi_timeframe_training.py  (+53 more)
search/: search_index.json
sqlite_integration_complete/: index.html
sqlite_integration_plan/: index.html
stuff/: analyze.py  index.html  test.py
tests/: README.md  __init__.py  conftest.py  test_black_scholes_model.py  test_consensus.py  test_dashboard_server.py  test_data_fetcher.py  test_data_providers.py  test_end_to_end.py  test_end_to_end.py.disabled  test_gbm_models.py  test_integration_critical_paths.py  test_international_markets.py  test_international_markets.py.disabled  test_lite_fetch.py  test_multi_horizon_demo.py  test_neural_network_model.py  test_offline_analyzer.py  test_performance.py  test_politician_signal.py  test_polymarket_policy_filter.py  test_populate_fundamental_history.py  test_scripts_integration.py  test_signal_gates.py  test_systematic_analysis.py  test_truth_social_ner.py  test_universal_fetcher.py  test_update_all.py  test_valuation.py
(+1332 files in other folders)
